--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'intro-script';
+  src: url('assets/fonts/IntroScript.otf') format('opentype'),
+  url('assets/fonts/IntroScript.otf') format('opentype');
+}
