--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'proxima-nova-semibold', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,18 +10,21 @@ code {
     monospace;
 }
 
+/* Headings */
 @font-face {
-  font-family: 'belepotan-italic';
-  src: url('assets/fonts/belepotan-italic.otf') format('opentype'),
-  url('assets/fonts/belepotan-italic.otf') format('opentype');
+  font-family: 'frieght-disp-bold';
+  src: url('assets/fonts/freight-disp-bold.otf') format('opentype'),
+  url('assets/fonts/freight-disp-bold.otf') format('opentype');
 }
 
+/* Body */
 @font-face {
-  font-family: 'belepotan-normal';
-  src: url('assets/fonts/belepotan-normal.otf') format('opentype'),
-  url('assets/fonts/belepotan-normal.otf') format('opentype');
+  font-family: 'proxima-nova-semibold';
+  src: url('assets/fonts/proxima-nova-semibold.otf') format('opentype'),
+  url('assets/fonts/proxima-nova-semibold.otf') format('opentype');
 }
 
+/* Signature */
 @font-face {
   font-family: 'intro-script';
   src: url('assets/fonts/intro-script.otf') format('opentype'),
